[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
rust_decimal = { version = "1.33", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
rust_decimal_macros = "1.33"
